# my-cw-20

./: .gitignore  Cargo.toml  Dockerfile  Makefile  cosmjs.config.ts  optimize.sh  package-lock.json  package.json  schema.sh  tsconfig.json
.cargo/: config
codegen/: Cw20.client.ts  Cw20.react-query.ts  codegen.ts  index.ts
codegen/contract/: Cw20Base.client.ts  Cw20Base.types.ts  Cw20Escrow.types.ts
contract/cw20-base/: Cargo.toml
contract/cw20-escrow/src/: contract.rs  error.rs  lib.rs  state.rs
contracts/cw20-base/src/: allowances.rs  contract.rs  msg.rs
contracts/cw20-escrow/src/: contract.rs  state.rs
cw20-base/: Cargo.toml
cw20-base/schema/: cw20-base.json
cw20-base/src/: allowances.rs  contract.rs  enumerable.rs  msg.rs  state.rs
cw20-escrow/: Cargo.toml
cw20-escrow/src/: integration_test.rs  msg.rs
deploy/: 1_deploy_cw20.ts  2_deploy_escrow.ts
front_end/: .eslintrc.json  cosmjs.config.ts  enviroment.d.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  window.d.ts
front_end/components/: index.ts
front_end/components/EscrowDetail/: EscrowDetail.tsx
front_end/components/EscrowDetailComponent/: EscrowDetailComponent.tsx
front_end/components/EscrowList/: EscrowList.tsx
front_end/components/EscrowListItem/: EscrowListItem.tsx
front_end/components/Header/: Header.tsx  header.module.css
front_end/components/Modal/: Modal.tsx
front_end/context/: Cw20EscrowProvider.tsx  WalletProvider.tsx
front_end/contract/: Cw20Escrow.client.ts
front_end/contracts/: Cw20Base.json  Cw20Escrow.client.ts  Cw20Escrow.json  Cw20Escrow.types.ts  index.ts
front_end/hook/: useArtifacts.ts  useAsync.ts
front_end/layout/: Layout.tsx  Main.tsx
front_end/pages/: _app.tsx  _document.tsx  index.tsx
front_end/pages/api/cw20Base/: index.ts
front_end/pages/api/cw20Escrow/: index.ts
front_end/pages/escrows/: [escrowId].tsx  index.tsx
scripts/: createEscrow.ts  createEscrowByCw20.ts  escrowDetail.ts  interact_with_cw20.ts  mintCw20.ts  mint_cw20.ts  setUp.ts  tokenInfo.ts  topUp.ts  transfer.ts
