[workspace]

members = [
  "contracts/cw20-base",
  "contracts/cw20-escrow"
]


[profile.release]
codegen-units = 1
opt-level = 'z'
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'abort'
incremental = false
# Please do not disable these. Doing so will cause overflow checks in
# all workspace members to stop working. Overflows should be errors.
overflow-checks = true
