[package]
name = "cw20-escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-schema = { version = "1.1.0" }
cw-utils = "1.0.1"
cw-storage-plus = "1.0.1"
cw2 = "1.0.0"
cw20 = "1.0.0"
cosmwasm-std = { version = "1.1.0" }
schemars = "0.8.1"
semver = "1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }


[dev-dependencies]
cw-multi-test = "0.16.0"
cw20-base = { version = "1.0.1", features = ["library"] }
